Fixed style issue on Firefox.

--- a/www/default.css
+++ b/www/default.css
@@ -48,8 +48,8 @@ th, td {
 .combined-table-header-rotated th.rotate-45{
   height: 160px;
   width: 110px;
-  min-width: 40px;
-  max-width: 40px;
+  min-width: 110px;
+  max-width: 110px;
   position: relative;
   vertical-align: bottom;
   padding: 0;
